@@ -9,6 +9,7 @@ libv4l-0.6.1
   it from the apps (do not assume it always needs conversion)
 * Change controls shm segment name to include the username, as it is only
   writable by the user (this means libv4l controls are per user) (Gregor Jasny)
+* Add support for decompressing sn9c2028 compressed bayer (Theodore Kilgore)
 
 libv4l-0.6.0
 ------------
